--- a/miraire/css/page/index/index.scss
+++ b/miraire/css/page/index/index.scss
@@ -13,7 +13,7 @@ section.about{
             font-weight: bold;
             color: $White;
         }
-        p.catchcopy{
+        p.catch-copy{
             font-size: 1.4rem;
             font-weight: bold;
             line-height: 1.3;
@@ -111,7 +111,7 @@ section.about{
                 width: 70%;
             }
         }
-        p.catchcopy{
+        p.catch-copy{
             margin-bottom: 1.8em;
         }
         p.text{
