--- a/miraire/css/page/voting_completed/voting_completed.scss
+++ b/miraire/css/page/voting_completed/voting_completed.scss
@@ -59,7 +59,7 @@ div.contents{
                 color: $Black;
                 line-height: 1.3;
             }
-            p.X-link{
+            p.x-link{
                 font-weight: bold;
                 color: $White;
                 font-size: 0.8rem;
@@ -185,7 +185,7 @@ main{
                         text-align: center;
                         margin-bottom: 1em;
                     }
-                    p.X-link{
+                    p.x-link{
                         text-align: center;
                         margin-left: auto;
                         margin-right: auto;
